...
            android:id="@+id/type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/expense"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/expense" />

            <RadioButton
                android:id="@+id/income"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/comparison_operator_entries"
                    android:entryValues="@array/comparison_operator_values" />

                <EditText
                    android:id="@+id/amount1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="1234567890,."
                    android:inputType="numberDecimal" />
            </TableRow>

...
