<?xml version="1.0" encoding="utf-8"?>
<!-- 
  This file is part of My Expenses.
  My Expenses is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  My Expenses is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with My Expenses.  If not, see <http://www.gnu.org/licenses/>.
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
  <TableLayout
	    android:paddingRight="@dimen/general_padding"
	    android:paddingLeft="@dimen/general_padding"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:id="@+id/Table"
	    android:stretchColumns="1"
	    android:shrinkColumns="1">
    <TableRow>
      <TextView style="@style/form_label"
          android:text="@string/label" />
      <EditText
          android:id="@+id/Label" 
          android:layout_width="wrap_content" 
          android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>
      <TextView style="@style/form_label"
          android:text="@string/description" />
      <EditText
          android:id="@+id/Description" 
          android:layout_width="wrap_content" 
          android:layout_height="wrap_content" />
    </TableRow>
      
    <TableRow>
      <TextView style="@style/form_label"
          android:text="@string/opening_balance"/>
      <LinearLayout
          android:orientation="horizontal">
        <include layout="@layout/amount_input"/>
      </LinearLayout>
    </TableRow>
      
    <TableRow>
      <TextView style="@style/form_label"
          android:text="@string/currency" />
     <Spinner android:id="@+id/Currency"
          android:prompt="@string/currency" />
    </TableRow>

    <TableRow>
      <TextView style="@style/form_label"
          android:text="@string/type" />
      <Spinner android:id="@+id/AccountType"
          android:prompt="@string/type" />
    </TableRow>

    <TableRow>
      <TextView style="@style/form_label"
          android:text="@string/color" />
      <Spinner android:id="@+id/Color"
          android:prompt="@string/color" />
    </TableRow>

  </TableLayout>
</ScrollView>