...
        <TextView style="@style/form_label_dialog"
            android:id="@+id/AccountLabel" android:text="@string/account"/>
        <TextView android:id="@+id/Account" style="@style/dialog_text"/>
      </TableRow>
      <TableRow android:id="@+id/CategoryRow">
        <TextView style="@style/form_label_dialog"
            android:id="@+id/CategoryLabel" android:text="@string/category" />
        <TextView android:id="@+id/Category"  style="@style/dialog_text"/>
      </TableRow>
      <TableRow>
        <TextView style="@style/form_label_dialog"
            android:text="@string/amount"/>
        <TextView android:id="@+id/Amount" style="@style/dialog_text"/>
...
        android:layout_weight="1"
        android:layout_width="fill_parent">
      <TextView
          style="@style/headingStyle"
          android:text="@string/plan_upcoming_instances_heading"/>
      <ListView
          android:id="@+id/list"
          android:layout_width="fill_parent"
          android:layout_height="0px"
          android:layout_weight="1" />
      <TextView style="@style/dialog_text"
          android:paddingRight="10dp"
          android:paddingLeft="10dp"
...
