...
    <item name="QUIT_COMMAND" type="id" />
    <item name="SPLIT_TRANSACTION_COMMAND" type="id" />
    <item name="TOGGLE_CHART_COMMAND" type="id" />
    <item name="VIEW_COMMAND" type="id" />
    <item name="CHANGE_COMMAND" type="id" />
    <item name="SAVE_COMMAND" type="id" />
    <item name="SEARCH_COMMAND" type="id" />
    <item name="SELECT_COMMAND_MULTIPLE" type="id" />
    <item name="UNDELETE_COMMAND" type="id" />
    <item name="EXPORT_CATEGORIES_COMMAND_UTF8" type="id" />
    <item name="EXPORT_CATEGORIES_COMMAND_ISO88591" type="id" />
    <item name="IMPORT_COMMAND" type="id" />
    <item name="PARSE_COMMAND" type="id" />
    <item name="SET_HEADER_COMMAND" type="id" />
...
